--- a/materials/01-cake/01-cake.html
+++ b/materials/01-cake/01-cake.html
@@ -38,6 +38,11 @@ layout: true
 
 
 
+class: inverse, middle
+
+# Let's start with a question...
+
+---
 
 class: middle, inverse
 
@@ -217,14 +222,15 @@ un_votes %&gt;%
 
 ---
 
-class: middle, center
+class: inverse, middle
 
+# Your turn
 
 ---
 
 class: inverse, middle
 
-## Getting started with RStudio Cloud
+# Back to the main course
 
 ---
 
