Add more examples

--- a/materials/03-livecode/03-livecode.html
+++ b/materials/03-livecode/03-livecode.html
@@ -135,6 +135,18 @@ class: inverse, middle
 
 ---
 
+## Virtual, live audience
+
+&lt;img src="images/live.png" width="85%" style="display: block; margin: auto;" /&gt;
+
+---
+
+## Virtual, prerecorded
+
+&lt;img src="images/prerecord.png" width="85%" style="display: block; margin: auto;" /&gt;
+
+---
+
 ## Live coding with strictly limited time
 
 .hand[e.g. meetup presentations, conference talks, etc.]
