Change back to factory settings

--- a/materials/03-livecode/03-livecode.html
+++ b/materials/03-livecode/03-livecode.html
@@ -201,6 +201,9 @@ Greg Wilson. [Teaching Tech Together: How to Make Your Lessons Work and Build a 
 - If need to type passwords, keep "off screen" notes handy that you can copy-paste from
 
 --
+- Use an RStudio addin to quickly switch to "factory settings" (e.g. 📦 [addmins](https://github.com/mine-cetinkaya-rundel/addmins/blob/master/R/use_teach_mode.R))
+
+--
 - Avoid switching between screens, disable notifications
 
 &lt;img src="images/shiny-livecode.jpeg" width="60%" style="display: block; margin: auto;" /&gt;
