--- a/materials/02-dayone/02-dayone.html
+++ b/materials/02-dayone/02-dayone.html
@@ -222,6 +222,16 @@ class: inverse, middle
 
 ---
 
+## Tips
+
+- Each project is allocated 1GB of RAM and 1 CPU
+  - Test things out before assignments involving large datasets 
+
+- What your students see is not always what you see
+  - Create a secondary account and add as a student
+  
+---
+
 class: inverse, middle
 
 # Your turn
