--- a/materials/04-creativity/04-creativity.html
+++ b/materials/04-creativity/04-creativity.html
@@ -72,10 +72,26 @@ class: inverse, middle
 
 ---
 
+## Learn a new (simple) package and do something with it
+
+.hand[
+"You gotta pick a package or two"
+]
+
+&gt;Pick a package from the list below, and use it to do something. If you want to use a package not on this list, that’s also ok, but it needs to be a package we haven’t used in class. If you start with a package and are struggling to get it to work, ask for help on Piazza or just move to another one.
+
+Examples include **babynames**, **prenoms**, **janeaustenr**, **plotly**, **flametree**, **ggbarf**, etc.
+
+---
+
 ## Make an ugly ggplot2
 
+.hand[
+"Mirror, mirror on the wall, who’s the ugliest of them all?"
+]
+
 .pull-left[
-&lt;img src="images/irnbru.png" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="images/irnbru.png" width="40%" style="display: block; margin: auto;" /&gt;
 ]
 .pull-right[
 &lt;img src="images/trex.png" width="100%" style="display: block; margin: auto;" /&gt;
