--- a/materials/00-welcome/00-welcome.html
+++ b/materials/00-welcome/00-welcome.html
@@ -66,12 +66,11 @@ layout: true
 
 | Time          | Module                        |
 |---------------|-------------------------------|
-| 08:00 - 08:15 | Introduction                  |
-| 08:15 - 08:55 | Let them eat cake first!      |
-|               | Cherish day one               |
-| 08:55 - 09:05 | Break                         |   
-| 09:05 - 10:00 | Live code, early and often    |
-|               | Provide feedback, instantly   |
+| 13:00 - 13:15 | Introduction                  |
+| 13:15 - 13:55 | Let them eat cake first!      |
+| 13:55 - 14:05 | Break                         |   
+| 14:05 - 15:00 | Cherish day one               |
+|               | Live code, early and often    |
 
 ---
 
@@ -81,13 +80,14 @@ layout: true
 
 | Time          | Module                        |
 |---------------|-------------------------------|
-| 08:00 - 08:10 | Recap                         |
-| 08:10 - 08:55 | Leverage visuals              |
+| 13:00 - 13:05 | Recap                         |
+| 13:10 - 13:55 | Make room for creativity      |
+|               | Provide feedback, instantly   |
 |               | Help with finding help        |
-|               | Define and pronounce term     |
-| 08:55 - 09:05 | Break                         |   
-| 09:05 - 10:00 | Highlight diversity           |
-|               | Make room for creativity      |
+|               | Define and pronounce          |
+| 13:55 - 14:05 | Break                         |   
+| 14:05 - 15:00 | Leverage visuals              |
+|               | Highlight diversity           |
 |               | Optimize discoverability      |
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
