--- a/materials/08-visual/08-visual.html
+++ b/materials/08-visual/08-visual.html
@@ -36,6 +36,61 @@ layout: true
 
 ---
 
+## Welcoming first exposure
+
+.pull-left[
+&lt;img src="images/dplyr_mutate.png" width="100%" style="display: block; margin: auto;" /&gt;
+]
+.pull-right[
+&lt;img src="images/ggplot2_exploration_es.png" width="100%" style="display: block; margin: auto;" /&gt;
+]
+
+.footnote[
+.small[
+https://github.com/allisonhorst/stats-illustrations
+]
+]
+
+---
+
+## Visual explanations
+
+&lt;img src="images/ggplot2_exploration_es.png" width="50%" style="display: block; margin: auto;" /&gt;
+
+.footnote[
+.small[
+https://twitter.com/hadleywickham/status/643381054758363136
+]
+]
+
+---
+
+## Visual incrementals
+
+with [**xaringanExtra** panels](https://pkg.garrickadenbuie.com/xaringanExtra/#/panelset)
+
+.center[
+&lt;iframe src="https://rstudio-education.github.io/datascience-box/course-materials/slides/u2-d02-ggplot2/u2-d02-ggplot2.html#7" width="672px" height="379px" allowfullscreen&gt;
+&lt;/iframe&gt;
+]
+
+---
+
+## Annotate, annotate, annotate
+
+&lt;img src="images/tour-r-rstudio.png" width="80%" style="display: block; margin: auto;" /&gt;
+
+---
+
+## Think beyond the visual...
+
+&lt;img src="images/beyond-visual.png" width="50%" style="display: block; margin: auto;" /&gt;
+
+.footnote[
+.small[
+https://twitter.com/KStackWhitney/status/1143497505654677504
+]
+]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
