--- a/materials/05-feedback/penguins/penguins.html
+++ b/materials/05-feedback/penguins/penguins.html
@@ -412,20 +412,20 @@ learnr:::store_exercise_cache("load-package", list(setup = NULL, chunks = list(l
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "awesome-penguins", 
     question = structure("How awesome are penguins?", html = TRUE, class = c("html", 
-    "character")), answers = list(structure(list(id = "lnr_ans_4a1f8", 
+    "character")), answers = list(structure(list(id = "lnr_ans_a919ecb", 
         option = "Super awesome!", value = "Super awesome!", 
         label = structure("Super awesome!", html = TRUE, class = c("html", 
         "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_143660d", 
+    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_ecf9493", 
         option = "Awesome", value = "Awesome", label = structure("Awesome", html = TRUE, class = c("html", 
         "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_62f88f3", 
+    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_e55d774", 
         option = "Meh", value = "Meh", label = structure("Meh", html = TRUE, class = c("html", 
         "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_99d289e", 
+    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_f1fc5bf", 
         option = "Not awesome", value = "Not awesome", label = structure("Not awesome", html = TRUE, class = c("html", 
         "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_1d9a1b2", 
+    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_a2335e8", 
         option = "Super not awesome", value = "Super not awesome", 
         label = structure("Super not awesome", html = TRUE, class = c("html", 
         "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
@@ -438,23 +438,23 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
         answer = "awesome-penguins-answer", question = "awesome-penguins"), 
     loading = structure("<strong>Loading:<\u002fstrong> \nHow awesome are penguins?\n<br/><br/><br/>", html = TRUE, class = c("html", 
     "character")), random_answer_order = FALSE, allow_retry = FALSE, 
-    seed = 1939238104.59697, options = list()), class = c("learnr_radio", 
+    seed = 529569963.2534, options = list()), class = c("learnr_radio", 
 "tutorial_question")))
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "penguin-colors", 
     question = structure("Penguins are which of the following colors?", html = TRUE, class = c("html", 
-    "character")), answers = list(structure(list(id = "lnr_ans_bfa3176", 
+    "character")), answers = list(structure(list(id = "lnr_ans_571ab5b", 
         option = "Black", value = "Black", label = structure("Black", html = TRUE, class = c("html", 
         "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_967765e", 
+    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_ce45c0c", 
         option = "White", value = "White", label = structure("White", html = TRUE, class = c("html", 
         "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_f36afb8", 
+    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_45a3dea", 
         option = "Magenta", value = "Magenta", label = structure("Magenta", html = TRUE, class = c("html", 
         "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_ba86959", 
+    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_81f0fde", 
         option = "Cyan", value = "Cyan", label = structure("Cyan", html = TRUE, class = c("html", 
         "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
     "tutorial_quiz_answer"))), button_labels = list(submit = structure("Submit Answer", html = TRUE, class = c("html", 
@@ -466,7 +466,7 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
         answer = "penguin-colors-answer", question = "penguin-colors"), 
     loading = structure("<strong>Loading:<\u002fstrong> \nPenguins are which of the following colors?\n<br/><br/><br/>", html = TRUE, class = c("html", 
     "character")), random_answer_order = FALSE, allow_retry = FALSE, 
-    seed = 78178925.9635951, options = list()), class = c("learnr_radio", 
+    seed = 610833378.715559, options = list()), class = c("learnr_radio", 
 "tutorial_question")))
 </script>
  
@@ -482,7 +482,7 @@ learnr:::store_exercise_cache("penguins-count", list(setup = NULL, chunks = list
     code = "penguins %>%\n  filter(island __ \"Biscoe\") %>%\n  ___(___)", 
     opts = list(label = "\"penguins-count\"", exercise = "TRUE"), 
     engine = "r")), code_check = NULL, error_check = NULL, check = structure(c("grade_this({", 
-"  pass_if_equal(", "    x = as.character(.result[1,2]), ", "    y = 124, ", 
+"  pass_if_equal(", "    x = as.character(.result[1,2]), ", "    y = \"124\", ", 
 "    message = \"In this dataset, the most common species of penguins on Biscoe island are Gentoo pengiuns.\"", 
 "  )", "  fail_if_equal(", "    x = as.character(.result[1,2]), ", 
 "    y = 123, ", "    message = \"Checking for 123 doesn't make sense here, change this to some other realistic check.\"", 
